# wb-toolbox

./: .appveyor.yml  .clang-format  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  PITCHME.md  PITCHME.yaml  README.md  ci_env.yml  create_issue.sh  index.html
+WBToolbox/: BlockInitialization.m  Mask2WBToolboxConfig.m  WBTPIDConfig.m
.ci/: generateDocumentation.sh  install.sh  script.sh
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
MxAnyType/: CMakeLists.txt
MxAnyType/include/: AnyType.h  MxAnyType.h
MxAnyType/src/: MxAnyType.cpp
cmake/: AddGeneratedCodeLib.cmake  ExtraPackageConfigVars.cmake.in  FindMatlab.cmake  Utilities.cmake  WBToolboxExtraPackageConfigVars.cmake.in
doc/: Migration.md  Migration_from_WB-Toolbox_2.0.md  Migration_from_WBI-Toolbox_1.0.md
doxygen/: _block_8cpp.html  _block_8cpp__incl.map  _block_8cpp__incl.md5  _block_8h.html  _block_8h__dep__incl.map  _block_8h__dep__incl.md5  _block_8h__incl.map  _block_8h__incl.md5  _block_8h_source.html  _block_information_8cpp.html  _block_information_8cpp__incl.map  _block_information_8cpp__incl.md5  _block_information_8h.html  _block_information_8h__dep__incl.map  _block_information_8h__dep__incl.md5  _block_information_8h__incl.map  _block_information_8h__incl.md5  _block_information_8h_source.html  _centroidal_momentum_8cpp.html  _centroidal_momentum_8cpp__incl.map  _centroidal_momentum_8cpp__incl.md5  _centroidal_momentum_8h.html  _centroidal_momentum_8h__dep__incl.map  _centroidal_momentum_8h__dep__incl.md5  _centroidal_momentum_8h__incl.map  _centroidal_momentum_8h__incl.md5  _centroidal_momentum_8h_source.html  _centroidal_total_momentum_matrix_8cpp.html  _centroidal_total_momentum_matrix_8cpp__incl.map  _centroidal_total_momentum_matrix_8cpp__incl.md5  _centroidal_total_momentum_matrix_8h.html  _centroidal_total_momentum_matrix_8h_source.html  _clock_server_8cpp.html  _clock_server_8h.html  _clock_server_8h__incl.md5  _clock_server_8h_source.html  _coder_block_information_8cpp__incl.md5  _coder_block_information_8h.html  _coder_block_information_8h__dep__incl.map  _coder_block_information_8h__incl.map  (+1015 more)
examples/: Tutorial1_DiscreteFilter.mdl  Tutorial2_ModelBlocks.mdl  Tutorial3_Gazebo.mdl
matlab/: CMakeLists.txt  export_library.m  setupForMatlabDebug.m.in  slblocks.m  startup_wbitoolbox.m.in
mkdocs/: 404.html  index.html  sitemap.xml
toolbox/: .startup_wbitoolbox.m.in  CMakeLists.txt  WBToolbox.tlc  WBToolbox2Library.mdl  WBToolbox2Library.slx  WBToolbox2Library_repository.slx  WBToolboxLibrary.mdl  WBToolboxLibrary.slx  WBToolboxLibrary_2012a.mdl  WBToolboxLibrary_repository.mdl  export_library.m  refactor_library.m  slblocks.m
toolbox/+WBToolbox/: PID.m  WBToolboxConfig.m  WBToolboxConfig2Mask.m
toolbox/autogenerated/: CMakeLists.txt
toolbox/autogenerated/src/thrift/: ClockServer.cpp
toolbox/base/: CMakeLists.txt
toolbox/base/include/Base/: Configuration.h  WBBlock.h
toolbox/base/include/WBToolbox/Base/: Configuration.h  RobotInterface.h  WholeBodySingleton.h
toolbox/base/src/: Configuration.cpp  RobotInterface.cpp  WBBlock.cpp  WholeBodySingleton.cpp
toolbox/core/: CMakeLists.txt
toolbox/core/include/Core/: CoderBlockInformation.h  SimulinkBlockInformation.h
toolbox/core/src/: BlockInformation.cpp  CoderBlockInformation.cpp  Parameter.cpp  Signal.cpp
toolbox/include/: CentroidalMomentum.h  DiscreteFilter.h  DotJDotQ.h  DotJNu.h  ForwardKinematics.h  GetBiasForces.h  GetControlReferences.h  GetEstimate.h  GetLimits.h  GetMeasurement.h  InverseDynamics.h  InverseKinematics.h  Jacobian.h  MassMatrix.h  MinimumJerkTrajectoryGenerator.h  ModelPartitioner.h  QpOases.h  RealTimeSynchronizer.h  RelativeTransform.h  RemoteInverseKinematics.h  SetLowLevelPID.h  SetMotorParameters.h  SetReferences.h  SimulatorSynchronizer.h  YARPWBIConverter.h  YarpClock.h  YarpRead.h  YarpWrite.h
toolbox/include/base/: Block.h  BlockInformation.h  CoderBlockInformation.h  Configuration.h  ConvertStdVector.h  Error.h  Factory.h  GeneratedCodeWrapper.h  Log.h  Parameter.h  Parameters.h  RobotInterface.h  Signal.h  SimulinkBlockInformation.h  ToolboxSingleton.h  WBBlock.h  WBIBlock.h  WBIModelBlock.h  WBInterface.h  debug.h  toolbox.h
toolbox/matlab/: export_library.m  setupForMatlabDebug.m.in  slblocks.m  startup_wbitoolbox.m.in
toolbox/matlab/+WBToolbox/: BlockInitialization.m  Configuration.m  ConfigurationToMask.m  Mask2WBToolboxConfig.m  MaskToConfiguration.m  PID.m  PIDConfiguration.m  WBTPIDConfig.m
toolbox/src/: CMakeLists.txt  CentroidalMomentum.cpp  DiscreteFilter.cpp  DotJDotQ.cpp  DotJNu.cpp  ForwardKinematics.cpp  GetBiasForces.cpp  GetControlReferences.cpp  GetEstimate.cpp  GetLimits.cpp  GetMeasurement.cpp  InverseDynamics.cpp  InverseKinematics.cpp  Jacobian.cpp  MassMatrix.cpp  MinimumJerkTrajectoryGenerator.cpp  ModelPartitioner.cpp  QpOases.cpp  RealTimeSynchronizer.cpp  RelativeTransform.cpp  RemoteInverseKinematics.cpp  SetLowLevelPID.cpp  SetMotorParameters.cpp  SetReferences.cpp  SimulatorSynchronizer.cpp  YARPWBIConverter.cpp  YarpClock.cpp  YarpRead.cpp  YarpWrite.cpp
toolbox/src/base/: Block.cpp  BlockInformation.cpp  CoderBlockInformation.cpp  Configuration.cpp  ConvertStdVector.cpp  Factory.cpp  Log.cpp  Parameter.cpp  Parameters.cpp  RobotInterface.cpp  Signal.cpp  SimulinkBlockInformation.cpp  ToolboxSingleton.cpp  WBBlock.cpp  WBIBlock.cpp  WBIModelBlock.cpp  WBInterface.cpp  WBToolbox.cpp  WholeBodySingleton.cpp  factory.cpp  toolbox.cpp
toolbox/src/core/: CMakeLists.txt
toolbox/src/core/include/Core/: Block.h
toolbox/src/core/src/: Block.cpp  ConvertStdVector.cpp  Log.cpp  Parameters.cpp  SimulinkBlockInformation.cpp  WBToolbox.cpp
toolbox/src/sharedlibpp/: CMakeLists.txt
toolbox/src/sharedlibpp/include/: SharedLibrary.h  SharedLibraryClass.h  SharedLibraryClassApi.h  SharedLibraryClassFactory.h  SharedLibraryFactory.h  Vocab.h  config.h
toolbox/src/sharedlibpp/src/: SharedLibrary.cpp  SharedLibraryFactory.cpp
toolbox/src/thrift/: CMakeLists.txt
toolbox/thrift/: CMakeLists.txt
(+1612 files in other folders)
