# Copyright (C) 2018 Istituto Italiano di Tecnologia (IIT). All rights reserved.
# This software may be modified and distributed under the terms of the
# GNU Lesser General Public License v2.1 or any later version.

find_package(shlibpp REQUIRED)
find_package(BlockFactory COMPONENTS BlockFactoryCore REQUIRED)

add_subdirectory(library)
