# Copyright (C) 2018 Istituto Italiano di Tecnologia (IIT). All rights reserved.
# This software may be modified and distributed under the terms of the
# GNU Lesser General Public License v2.1 or any later version.

# External projects
add_subdirectory(sharedlibpp)

# Toolbox Core
add_subdirectory(core)

# WBToolbox
add_subdirectory(library)
